Adding temporary changes to Github

--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <!-- Link the style sheet here -->
+  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -27,36 +28,38 @@
   
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
-      <!-- Insert header information here -->
+        <h1>About Us</h1>
+        <p>Welcome to Best Cars Dealership! We are proud to be one of the leading car dealerships in North America. With over 20 years of experience, we specialize in offering a diverse range of domestic and imported cars at unbeatable prices.</p>
+        <p>Our commitment to customer satisfaction and our carefully curated selection ensures that whether you’re looking for a luxury model or a family car, you’ll find the perfect vehicle to suit your needs. We believe in delivering quality, trust, and excellence in everything we do.</p>
       </div>
-      <div style="display: flex;flex-direction: row; margin:auto">
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+      <div style="display: flex;flex-direction: row; margin:auto;">
+      <div class="card" style="width: 30%; margin-right: 5%;">
+        <img class="card-img-top" src="/static/image -3.jpg" alt="Person1">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">Alex Johnson</p>
+          <p>Chief Executive Officer</p>
+          <p class="card-text">Alex has over 15 years of experience in the automotive industry. He is passionate about customer service and leads the team with a focus on innovation and excellence.</p>
+          <p>alex.johnson@example.com</p>
+        </div>
+      </div>
+
+      <div class="card" style="width: 30%; margin-right: 5%;">
+        <img class="card-img-top" src="/static/image -1.jpg" alt="Person2">
+        <div class="card-body">
+          <p class="title">Sarah Williams</p>
+          <p>Head of Sales</p>
+          <p class="card-text">Sarah is dedicated to helping customers find the perfect car. With a decade of experience, she ensures every customer leaves with a smile.</p>
+          <p>sarah.williams@example.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/image -2.jpg" alt="Person3">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
-        </div>
-      </div>
-
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
-        <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">Michael Smith</p>
+          <p>Customer Relations Manager</p>
+          <p class="card-text">Michael oversees all customer interactions to ensure satisfaction. He is known for his quick problem-solving and attention to detail.</p>
+          <p>michael.smith@example.com</p>
         </div>
       </div>
     </div>
